@startuml

' =========================
' PvE Controller Layer
' =========================
class PvEController {
    - Campaign campaign
    + startCampaign(List<Hero>)
    + nextRoom()
    + getCampaign(): Campaign
}

' =========================
' Campaign Layer
' =========================
class Campaign {
    - Party party
    - int currentRoom
    + start()
    + nextRoom()
    + getParty(): Party
    + getCurrentRoom(): int
}

' =========================
' Factory Pattern
' =========================
class RoomFactory {
    + createRoom(int floor, Party party): Room
}


abstract class Room {
    - int floor
    + execute(Party party)
}

class BattleRoom {
    - List<Enemy> enemies
    + execute(Party party)
    - generateEnemies(Party party)
}

class InnRoom {
    + execute(Party party)
    - healParty(Party party)
    - offerShop(Party party)
    - offerRecruitment(Party party)
}

Room <|-- BattleRoom
Room <|-- InnRoom

class Party {
    - List<Hero> heroes
    - int gold
    + addHero(Hero h)
    + getHeroes(): List<Hero>
    + getTotalLevel(): int
    + addGold(int g)
    + spendGold(int g)
    + getGold(): int
}

class Hero {
    + getLevel(): int
    + restoreHp(int)
    + restoreMana(int)
}

class Enemy

'
class Battle {
    + startBattle()
}


PvEController --> Campaign
Campaign --> Party
Campaign --> RoomFactory
RoomFactory --> Room
BattleRoom --> Battle
BattleRoom --> Enemy
Party --> Hero

@enduml